Create endpoint to show details user
